--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 
-
+<img src = "Images/KrishnaFlute.png">
     <div class="center">
       <p class="center">We'll be born at the end of July.</p>
       </div>
