--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
 
-<img src = "Images/KrishnaFlute.png">
-<a href="http://elangovansankaralingom.myportfolio.com"></a>
+
+<a href="http://elangovansankaralingom.myportfolio.com"><img src = "Images/KrishnaFlute.png"></a>
     <div class="center">
       <p class="center">We'll be born at the end of July.</p>
       </div>
