--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
 <a href="http://bava-kumaravel.com" target="_blank"><img src = "Images/KrishnaFlute.png"></a>
     <div class="center">
-      <p class="center">We'll be born at the end of July.</p>
-      </div>
+      <a href="https://elangovansankaralingom.myportfolio.com/" target="_blank" style="text-decoration:none;color:black"><p class="center">We'll be born at the end of July.</p></a>
+      <p class="meanwhile"> Meanwhile look for our hyperlinks.</p>
+      <p class="copyrights">©XM 2018.</p>
+    </div>
 
 
     </body>
